Добавил метод getRoleFromToken() в JwtService, исправил JwtAuthenticationFilter для добавления authorities, обновил User entity для реализации UserDetails, исправил OrderController для загрузки свежего пользователя из БД, удалил локальную конфигурацию из SecurityConfig, добавил проверки на null в OrderService